# firefox-web-apps

./: .gitignore  create_app.py  pyproject.toml  requirements.txt  setup.sh
fwa/: config.py  log.py  setup.py  validation.py
