[tool.poetry]
name = "fwa"
version = "0.1.0"
description = "Firefox Web Apps"
authors = ["Ceda EI <ceda_ei@webionite.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[tool.poetry.scripts]
fwa-create-app = "fwa.create_app:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
